# bonsol-airdrop

./: .gitignore  Cargo.toml  README.md
solana-program/: Cargo.toml
solana-program/src/: lib.rs
zk-programs/airdrop/: Cargo.toml  README.md  manifest.json
zk-programs/airdrop/src/: main.rs
